# kgents

./: .dockerignore  .env.example  .gitignore  README.md  TESTING.md  docker-compose.yml  entrypoint.sh  main.py  merge_code.py  prd.md  pyproject.toml  pytest.ini  supabase_schema.sql  todo.md  todo2.md
agent_management_service/: .env.dev  .env.example  .env.prod  .env.test  Dockerfile  Dockerfile.prod  MIGRATIONS.md  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.sh  init_database.sh  pyproject.toml  pytest.ini
agent_management_service/alembic/: env.py
agent_management_service/alembic/versions/: 2e3418e9ef1b_initial_schema.py  3588a9fd75a4_initial_schema.py  98bd89785ba3_initial_schema.py
agent_management_service/docs/: database_migration_recommendations.md
agent_management_service/scripts/: DB_COMMANDS.md  create_migration.sh  manage_db.py  setup_test_db.py  verify_migrations.py
agent_management_service/sql/: init.sql  validate_schema.sql
agent_management_service/src/agent_management_service/: config.py  db.py  logging_config.py  main.py  rate_limiting.py  security.py  supabase_client.py
agent_management_service/src/agent_management_service/clients/: __init__.py  auth_service_client.py
agent_management_service/src/agent_management_service/crud/: __init__.py  agents.py  versions.py
agent_management_service/src/agent_management_service/dependencies/: __init__.py  app_deps.py  auth.py  user_deps.py
agent_management_service/src/agent_management_service/models/: __init__.py  agent.py  agent_version.py  base.py
agent_management_service/src/agent_management_service/routers/: __init__.py  agent_routes.py  health.py  health_routes.py  langflow_routes.py  version_routes.py
agent_management_service/src/agent_management_service/schemas/: __init__.py  agent.py  agent_version.py  common.py  langflow_schemas.py
agent_management_service/src/agent_management_service/services/: langflow_service.py
agent_management_service/src/agent_management_service/utils/: helpers.py
agent_management_service/tests/: conftest.py
agent_management_service/tests/fixtures/: client.py  db.py  helpers.py  mocks.py
agent_management_service/tests/integration/: test_api.py
agent_management_service/tests/unit/: test_auth_dependency.py  test_crud.py  test_models.py
agent_management_service/tests/utils/: test_helpers.py
agent_runtime_service/: .env.dev  Dockerfile  README.md  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
agent_runtime_service/alembic/: env.py
agent_runtime_service/src/agent_runtime_service/: config.py  logging_config.py  main.py
agent_runtime_service/src/agent_runtime_service/dependencies/: user_deps.py
agent_runtime_service/src/agent_runtime_service/routers/: __init__.py  health_routes.py  (+1 more)
auth_service/: .env.dev  .env.example  .env.prod  .env.test  Dockerfile  Dockerfile.prod  MIGRATIONS.md  README.md  alembic.ini  debug_routes.py  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.sh  init_database.sh  pyproject.toml
auth_service/alembic/: env.py
auth_service/alembic/versions/: 3e2ec42a1428_initial_schema.py  54a06b713e60_create_initial_tables.py  8409209c8b9b_initial_schema.py  f19b00a15cb8_initial_schema.py
auth_service/scripts/: DB_COMMANDS.md  auth_test_migrations.py  copy_auth_schema.py  manage_db.py  verify_alembic_setup.py  verify_migrations.py
auth_service/src/auth_service/: bootstrap.py  config.py  db.py  debug_routes.py  init_database.sh  logging_config.py  main.py  security.py
auth_service/tests/: README.md  conftest.py  mocks.py  test_user_registration.py
auth_service/tests/fixtures/: client.py  db.py  helpers.py  mocks.py  test_data.py  user_test_fixtures.py
auth_service/tests/helpers/: test_data_factory.py
auth_service/tests/integration/: test_user_registration.py  test_user_registration_flow.py
auth_service/tests/unit/: test_authentication_edge_cases.py  test_oauth_login.py  test_password_reset.py  test_user_crud.py
conversation_service/: .env.dev  .env.example  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  entrypoint.sh  pyproject.toml
conversation_service/alembic/: env.py
conversation_service/alembic/versions/: a291c8fccabc_initial_schema.py
conversation_service/scripts/: manage_db.py
conversation_service/src/conversation_service/: bootstrap.py  config.py  db.py  logging_config.py  main.py  security.py
nl_agents_service/: .env.example  Dockerfile  Dockerfile.prod  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml
shared/: __init__.py  pyproject.toml  setup.py
shared/models/: base.py
shared/schemas/: __init__.py  user_schemas.py
shared/security/: __init__.py  jwt.py
shared/shared/models/: __init__.py  base.py
shared/shared/schemas/: __init__.py  user_schemas.py
tool_registry_service/: .dockerignore  .env.dev  .env.example  .env.prod  Dockerfile  Dockerfile.prod  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  entrypoint.sh  pyproject.toml  pytest.ini
tool_registry_service/alembic/: env.py
tool_registry_service/alembic/versions/: 23bfef8c82e1_initial_schema.py  99389103c306_initial_schema.py  e3cc429200df_create_initial_tool_registry_tables.py  f67d8a35f8da_add_metadata_column_to_tools.py
tool_registry_service/docs/api/: README.md
tool_registry_service/docs/deployment/: README.md
tool_registry_service/docs/development/: README.md
tool_registry_service/docs/testing/: README.md
tool_registry_service/scripts/: README.md  manage_db.py  manage_migrations.py
tool_registry_service/sql/: schema.sql
tool_registry_service/src/tool_registry_service/: config.py  db.py  logging_config.py  main.py  security.py
tool_registry_service/tests/: conftest.py
tool_registry_service/tests/fixtures/: tools.py
tool_registry_service/tests/integration/: test_category_routes.py
tool_registry_service/tests/unit/: test_category_crud.py
tool_registry_service/tests/utils/: auth.py  db.py
(+152 files in other folders)
