[project]
name = "agent-management-service"
version = "0.1.0"
description = "Agent Management Service for the Kgents Platform"
authors = [ {name = "Kgents Team", email = "team@kgents.com"} ]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  # Core web framework
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.1,<1.0.0",

  # Settings and data validation
  "pydantic[email]>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",

  # Database
  "sqlalchemy[asyncio]>=2.0.31,<3.0.0",
  "psycopg[binary,pool]>=3.1.19,<4.0.0",
  "alembic>=1.13.1,<2.0.0",

  # Security and Authentication
  "python-jose[cryptography]>=3.3.0,<4.0.0",

  # External Services and Utilities
  "httpx>=0.27.0,<1.0.0"
  "fastapi-limiter>=0.1.6,<1.0.0",
  "slowapi>=0.1.9,<1.0.0", # Required for rate limiting
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "ruff>=0.4.0,<1.0.0",
  "black>=24.4.0,<25.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pre-commit>=3.7.0,<4.0.0",
  "asgi-lifespan>=2.1.0,<3.0.0"
]

# --- Poetry Specific Configuration ---

[tool.poetry]
name = "agent-management-service"
version = "0.1.0"
description = "Agent Management Service for the Kgents Platform"
authors = [ {name = "Kgents Team", email = "team@kgents.com"} ]
readme = "README.md"
packages = [
    { include = "agent_management_service", from = "src" },
    { include = "shared", from = ".." } 
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.111.0,<1.0.0"
uvicorn = { extras = ["standard"], version = ">=0.30.1,<1.0.0" }
pydantic = { extras = ["email"], version = ">=2.7.0,<3.0.0" }
pydantic-settings = ">=2.3.0,<3.0.0"
sqlalchemy = { extras = ["asyncio"], version = ">=2.0.31,<3.0.0" }
psycopg = { extras = ["binary", "pool"], version = ">=3.1.19,<4.0.0" }
alembic = ">=1.13.1,<2.0.0"
python-jose = { extras = ["cryptography"], version = ">=3.3.0,<4.0.0" }
httpx = ">=0.27.0,<1.0.0"
fastapi-limiter = "^0.1.6"
slowapi = "^0.1.9"

# A comprehensive set of development dependencies
[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=8.2.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
asgi-lifespan = ">=2.1.0,<3.0.0"    # For testing FastAPI startup/shutdown events

# Code Quality & Formatting
ruff = ">=0.4.0,<1.0.0"             # Fast linter and formatter
black = ">=24.4.0,<25.0.0"          # Opinionated code formatter
mypy = ">=1.10.0,<2.0.0"            # Static type checker

# Development Workflow
pre-commit = ">=3.7.0,<4.0.0"       # Running checks before git commits

# --- Build & Tooling Configuration ---
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", ".."]
testpaths = ["tests"]
asyncio_mode = "auto"
