# auth_service/pyproject.toml
# Modern pyproject.toml using PEP 621 [project] table

# -----------------
# Standard Metadata (PEP 621)
# -----------------
[project]
name = "auth-service" 
version = "0.1.0"
description = "Handles user authentication, authorization, and profiles for the Kgents platform."
authors = [ {name = "Kgents Team", email = "team@kgents.com"} ]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  # Core web framework
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.1,<1.0.0",
  
  # Settings and data validation
  "pydantic[email]>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  
  # Database
  "sqlalchemy[asyncio]>=2.0.31,<3.0.0",
  "psycopg[binary,pool]>=3.1.19,<4.0.0",
  "alembic>=1.13.1,<2.0.0",
  
  # Security and Authentication
  "python-jose[cryptography]>=3.3.0,<4.0.0",
  "supabase[async]>=2.5.0,<3.0.0", # Switched to the official async client
  "passlib[bcrypt]>=1.7.4,<2.0.0", # For password hashing
  
  # External Services and Utilities
  "httpx>=0.27.0,<1.0.0",
  "fastapi-limiter>=0.1.6,<1.0.0",
  "slowapi>=0.1.9,<1.0.0", # Required for rate limiting
  
  # Development tools
  "black>=24.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "pytest-asyncio>=0.23.0,<1.0.0",
  "pytest-cov>=5.0.0,<6.0.0",
  "httpx>=0.27.0,<1.0.0",
  "asgi-lifespan>=2.1.0,<3.0.0",
  "ruff>=0.4.0,<1.0.0",
  "black>=24.4.0,<25.0.0",
  "mypy>=1.10.0,<2.0.0",
  "pre-commit>=3.7.0,<4.0.0"
]


# -----------------
# Poetry-Specific Configuration
# -----------------
[tool.poetry]
packages = [
    { include = "auth_service", from = "src" },
]

[tool.poetry.dependencies]
# Add our local shared package as a path dependency
kgents-shared = { path = "../shared", develop = true }

# -----------------
# Build System & Other Tooling
# -----------------
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", ".."]
testpaths = ["tests"]
asyncio_mode = "auto"
