[project]
name = "tool-registry-service"
version = "0.1.0"
description = "Manages the registration, storage, and discovery of custom tools for agents."
authors = [ {name = "Kgents Team", email = "team@kgents.com"} ]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
  # Core web framework
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.1,<1.0.0",

  # Settings and data validation
  "pydantic[email]>=2.5.0,<3.0.0",
  "pydantic-settings>=2.3.4,<3.0.0",

  # Database
  "sqlalchemy[asyncio]>=2.0.31,<3.0.0",
  "psycopg[binary,pool]>=3.1.8,<4.0.0",
  "alembic>=1.13.1,<2.0.0",

  # Security (for validating JWTs from auth_service)
  "python-jose[cryptography]>=3.3.0,<4.0.0",
]

# --- Poetry Specific Configuration ---

[tool.poetry]
name = "tool-registry-service"
version = "0.1.0"
description = "Manages the registration, storage, and discovery of custom tools for agents."
authors = [ {name = "Kgents Team", email = "team@kgents.com"} ]
readme = "README.md"
packages = [
    { include = "tool_registry_service", from = "src" },
    { include = "shared", from = ".." } 
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.1"}
pydantic = {extras = ["email"], version = "^2.7.4"}
pydantic-settings = "^2.3.4"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.31"}
psycopg = {extras = ["binary", "pool"], version = "^3.1.19"}
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
jsonschema = "^4.22.0"

[tool.poetry.group.dev.dependencies]
# Testing
pytest = ">=8.2.0,<9.0.0"
pytest-asyncio = ">=0.23.0,<1.0.0"
pytest-cov = ">=5.0.0,<6.0.0"
httpx = "^0.27.0"           # For making HTTP requests in tests
asgi-lifespan = "^2.1.0"    # For testing FastAPI startup/shutdown events

# Code Quality & Formatting
ruff = "^0.4.10"            # Fast linter and formatter
black = "^24.4.2"           # Opinionated code formatter
mypy = "^1.10.0"            # Static type checker

# Development Workflow
pre-commit = "^3.7.1"       # Running checks before git commits


# --- Build & Tooling Configuration ---
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src", ".."]
testpaths = ["tests"]
asyncio_mode = "auto"